fix: fix z-index overlay gallery

--- a/src/pages/gallery/styles.css
+++ b/src/pages/gallery/styles.css
@@ -45,6 +45,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .selected-photo {
